# delta-rs

./: CONTRIBUTING.md  Cargo.toml
.github/actions/setup-env/: action.yml
.github/workflows/: benchmark.yml
crates/benchmarks/: Cargo.toml
crates/kernel/: Cargo.toml
crates/kernel/src/: error.rs  lib.rs  scalars.rs
crates/kernel/src/arrow/: engine_ext.rs  extract.rs
crates/kernel/src/schema/: partitions.rs  schema.rs
crates/kernel/src/schema/cast/: merge_schema.rs
crates/kernel/src/snapshot/: iterators.rs  mod.rs
crates/kernel/src/transaction/: conflict_checker.rs  mod.rs  protocol.rs
crates/logstore/: Cargo.toml
crates/logstore/src/: config.rs  default_logstore.rs  error.rs  factories.rs  lib.rs
crates/logstore/src/storage/: mod.rs  retry_ext.rs  utils.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: actions.rs  error.rs  lib.rs
python/: Cargo.toml  pyproject.toml
python/deltalake/: __init__.py  _internal.pyi  fs.py  writer.py
python/src/: lib.rs
