[package]
name = "deltalake-protocol"
version = "0.29.2"
authors.workspace = true
keywords.workspace = true
readme.workspace = true
edition.workspace = true
homepage.workspace = true
description = "Delta Lake protocol types and error handling"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Delta kernel (for Metadata, Protocol re-exports)
delta_kernel.workspace = true

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Object store (for ObjectStoreError in TransactionError)
object_store = { workspace = true }

# Utilities
uuid = { workspace = true, features = ["serde", "v4"] }
chrono = { workspace = true }
percent-encoding = "2"
strum = { workspace = true }

